# geopolitical_scenarios

./: .gitignore  CODEX.md  CONTRIBUTING.md  README.md  geopolitical_platform_build_pack.md  package.json  realtime_geopolitical_sensing_platform_blueprint.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  research.md
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/src/geostate_api/: main.py
apps/api/src/geostate_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/api/src/geostate_api/routes/: analysis.py  health.py
apps/api/src/geostate_api/services/: scenario_analysis.py
apps/api/tests/: test_analysis.py  test_health.py
apps/web/: README.md  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/alternative/: page.tsx
apps/web/app/components/: impact-map.tsx
claude_recommendation/: IMPLEMENTATION.md  globals.css  page.tsx  weight_resolver.py
docs/: README.md
docs/adr/: 0001-monorepo-and-docs-first-scaffold.md
docs/architecture/: overview.md
docs/engineering/: command-reference.md  definition-of-done.md  git-management.md  git-workflow.md
docs/operations/: production-details.md  runbook.md
docs/product/: event-ontology.md  product-requirements.md  scenario-engine-spec.md
